tests/semantic/invalid/10_void_as_expr.tc
// ERR_VOID_FUNC_CALL_EXPR: assigning to a function name
void foo(void) {
    return;
}
int main(void) {
    foo = 1;
    return 0;
}
